tests/invalid/no_brace.c
int main() {
    return 0;
// ERROR: Line 4, Error 2004
